crates/cli/tests/integration/snapshots/integration__snapshot_tests__sarif_health_empty.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
assertion_line: 2978
expression: redact_health_sarif_version(&json_str)
---
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "fallow",
          "version": "[VERSION]",
          "informationUri": "https://github.com/fallow-rs/fallow",
          "rules": [
            {
              "id": "fallow/high-cyclomatic-complexity",
              "shortDescription": {
                "text": "Function has high cyclomatic complexity"
              },
              "fullDescription": {
                "text": "McCabe cyclomatic complexity exceeds the configured threshold. Cyclomatic complexity counts the number of independent paths through a function (1 + decision points: if/else, switch cases, loops, ternary, logical operators). High values indicate functions that are hard to test exhaustively. fallow also emits this rule on synthetic `<template>` findings across every supported template dialect (Angular .html templates and inline `@Component({ template: ... })` literals, Vue SFC `<template>` blocks, Svelte markup, Astro markup), counting each dialect's control-flow blocks (Angular `@if`/`@else if`/`@for`/`@case`/`@defer (when ...)` and legacy `*ngIf`/`*ngFor`; Vue `v-if`/`v-else-if`/`v-for`; Svelte `{#if}`/`{:else if}`/`{#each}`/`{#await}`/`{#key}`; the Astro equivalents) plus ternary and logical operators inside bound attributes and interpolations; on each top-level Svelte `{#snippet name(...)}` block, emitted as its own `<snippet:NAME>` unit; and on synthetic `<component>` rollup findings whose `cyclomatic` is the worst class method's score plus the template's. Ranking and `--targets` use the rollup total; JSON exposes the per-half breakdown under `component_rollup`."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#cyclomatic-complexity",
              "defaultConfiguration": {
                "level": "note"
              }
            },
            {
              "id": "fallow/high-cognitive-complexity",
              "shortDescription": {
                "text": "Function has high cognitive complexity"
              },
              "fullDescription": {
                "text": "SonarSource cognitive complexity exceeds the configured threshold. Unlike cyclomatic complexity, cognitive complexity penalizes nesting depth and non-linear control flow (breaks, continues, early returns). It measures how hard a function is to understand when reading sequentially. fallow also emits this rule on synthetic `<template>` findings across every supported template dialect (Angular .html templates and inline `@Component({ template: ... })` literals, Vue SFC `<template>` blocks, Svelte markup, Astro markup), where nesting penalties accumulate on stacked control-flow blocks: Angular `@if`/`@for`/`@switch`, Vue `v-if`/`v-for`, Svelte `{#if}`/`{#each}`/`{#await}`; on each top-level Svelte `{#snippet name(...)}` block, emitted as its own `<snippet:NAME>` unit with nesting rebased to zero so in-file snippet extraction lowers the parent template's score; and on synthetic `<component>` rollup findings whose `cognitive` is the worst class method's score plus the template's. Ranking and `--targets` use the rollup total; JSON exposes the per-half breakdown under `component_rollup`."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#cognitive-complexity",
              "defaultConfiguration": {
                "level": "note"
              }
            },
            {
              "id": "fallow/high-complexity",
              "shortDescription": {
                "text": "Function exceeds both complexity thresholds"
              },
              "fullDescription": {
                "text": "Function exceeds both cyclomatic and cognitive complexity thresholds. This is the strongest signal that a function needs refactoring, it has many paths AND is hard to understand. The same rule fires on synthetic `<template>` findings in every supported template dialect (Angular .html templates and inline `@Component({ template: ... })` literals, Vue SFC `<template>` blocks, Svelte markup, Astro markup) when both metrics exceed their thresholds, and on synthetic `<component>` rollup findings whose totals are the worst class method's score plus the template's. Ranking and `--targets` use the rollup totals; JSON exposes the per-half breakdown under `component_rollup`."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#complexity-metrics",
              "defaultConfiguration": {
                "level": "note"
              }
            },
            {
              "id": "fallow/high-crap-score",
              "shortDescription": {
                "text": "Function has a high CRAP score (complexity combined with low coverage)"
              },
              "fullDescription": {
                "text": "The function's CRAP (Change Risk Anti-Patterns) score meets or exceeds the configured threshold. CRAP combines cyclomatic complexity with test coverage using the Savoia and Evans (2007) formula: `CC^2 * (1 - coverage/100)^3 + CC`. High CRAP indicates changes to this function carry high risk because it is complex AND poorly tested. Pair with `--coverage` for accurate per-function scoring; without it fallow estimates coverage from the module graph. This rule fires on functions only: synthetic template-family units (`<template>`, Svelte `<snippet:NAME>`) are excluded from the CRAP dimension, because a template is exercised only through its component and carries no coverage the formula could measure. Templates gate on the cyclomatic and cognitive dimensions instead."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#crap-score",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/refactoring-target",
              "shortDescription": {
                "text": "File identified as a high-priority refactoring candidate"
              },
              "fullDescription": {
                "text": "File identified as a refactoring candidate based on a weighted combination of complexity density, churn velocity, dead code ratio, fan-in (blast radius), and fan-out (coupling). Categories: urgent churn+complexity, break circular dependency, split high-impact file, remove dead code, extract complex functions, reduce coupling."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#refactoring-targets",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/untested-file",
              "shortDescription": {
                "text": "Runtime-reachable file has no test dependency path"
              },
              "fullDescription": {
                "text": "A file is reachable from runtime entry points but not from any discovered test entry point. This indicates production code that no test imports, directly or transitively, according to the static module graph."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#coverage-gaps",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/untested-export",
              "shortDescription": {
                "text": "Runtime-reachable export has no test dependency path"
              },
              "fullDescription": {
                "text": "A value export is reachable from runtime entry points but no test-reachable module references it. This is a static test dependency gap rather than line coverage, and highlights exports exercised only through production entry paths."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#coverage-gaps",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/runtime-safe-to-delete",
              "shortDescription": {
                "text": "Statically unused AND never invoked in production with V8 tracking"
              },
              "fullDescription": {
                "text": "The function is both statically unreachable in the module graph and was never invoked during the observed runtime coverage window. This is the highest-confidence delete signal fallow emits."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#runtime-coverage",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/runtime-review-required",
              "shortDescription": {
                "text": "Statically used but never invoked in production"
              },
              "fullDescription": {
                "text": "The function is reachable in the module graph (or exercised by tests / untracked call sites) but was not invoked during the observed runtime coverage window. Needs a human look: may be seasonal, error-path only, or legitimately unused."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#runtime-coverage",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/runtime-low-traffic",
              "shortDescription": {
                "text": "Function was invoked below the low-traffic threshold"
              },
              "fullDescription": {
                "text": "The function was invoked in production but below the configured `--low-traffic-threshold` fraction of total trace count (spec default 0.1%). Effectively dead for the current period."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#runtime-coverage",
              "defaultConfiguration": {
                "level": "note"
              }
            },
            {
              "id": "fallow/runtime-coverage-unavailable",
              "shortDescription": {
                "text": "Runtime coverage could not be resolved for this function"
              },
              "fullDescription": {
                "text": "The function could not be matched to a V8-tracked coverage entry. Common causes: the function lives in a worker thread (separate V8 isolate), it is lazy-parsed and never reached the JIT tier, or its source map did not resolve to the expected source path. This is advisory, not a dead-code signal."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#runtime-coverage",
              "defaultConfiguration": {
                "level": "note"
              }
            },
            {
              "id": "fallow/runtime-coverage",
              "shortDescription": {
                "text": "Runtime coverage finding"
              },
              "fullDescription": {
                "text": "Generic runtime-coverage finding for verdicts not covered by a more specific rule. Covers the forward-compat `unknown` sentinel; the CLI filters `active` entries out of `runtime_coverage.findings` so the surfaced list stays actionable."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#runtime-coverage",
              "defaultConfiguration": {
                "level": "note"
              }
            },
            {
              "id": "fallow/coverage-intelligence-risky-change",
              "shortDescription": {
                "text": "Changed hot path combines high CRAP and low test coverage"
              },
              "fullDescription": {
                "text": "Coverage intelligence combined change scope, runtime hot-path evidence, low test coverage, and high CRAP into a risky-change finding. Add focused tests or split the change before merging."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#coverage-intelligence",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/coverage-intelligence-delete",
              "shortDescription": {
                "text": "Static and runtime evidence indicate code can be deleted"
              },
              "fullDescription": {
                "text": "Coverage intelligence combined static unused status, runtime cold evidence, and lack of test reachability into a high-confidence delete recommendation."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#coverage-intelligence",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/coverage-intelligence-review",
              "shortDescription": {
                "text": "Cold reachable uncovered code needs owner review"
              },
              "fullDescription": {
                "text": "Coverage intelligence found code that is statically reachable but cold in runtime evidence, uncovered by tests, and ownership-risky. Route it to an owner before changing or deleting it."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#coverage-intelligence",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/coverage-intelligence-refactor",
              "shortDescription": {
                "text": "Hot covered code has high CRAP and should be refactored carefully"
              },
              "fullDescription": {
                "text": "Coverage intelligence found hot production code that is covered by tests but still has high CRAP. Refactor carefully while preserving behavior."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#coverage-intelligence",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/css-token-drift",
              "shortDescription": {
                "text": "CSS or CSS-in-JS hardcoded styling value bypasses the design token system"
              },
              "fullDescription": {
                "text": "A styling value appears to bypass the project's design token system, for example a Tailwind arbitrary value in markup. The finding is advisory by default and does not affect the audit verdict unless rules.css-token-drift is set to error. Verify the value and replace it with an existing scale token when appropriate."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#css-token-drift",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/css-duplicate-block",
              "shortDescription": {
                "text": "CSS or CSS-in-JS declaration block is duplicated across rules"
              },
              "fullDescription": {
                "text": "A style rule declaration block is repeated across selectors, suggesting copy-pasted styling that can often be consolidated. The finding is advisory by default and does not affect the audit verdict unless rules.css-duplicate-block is set to error."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#css-duplicate-block",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/css-selector-complexity",
              "shortDescription": {
                "text": "CSS selector, nesting, or important usage is structurally complex"
              },
              "fullDescription": {
                "text": "A CSS or CSS-in-JS rule crosses the structural floor for selector specificity, selector complexity, nesting depth, or important usage. The finding is advisory by default and does not affect the audit verdict unless rules.css-selector-complexity is set to error."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#css-selector-complexity",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/css-dead-surface",
              "shortDescription": {
                "text": "CSS or CSS-in-JS surface appears unused"
              },
              "fullDescription": {
                "text": "A styling surface appears unused in the analyzed project, such as a scoped SFC class with no component-local use. The finding is advisory by default and does not affect the audit verdict unless rules.css-dead-surface is set to error. Verify dynamic consumers before deleting."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#css-dead-surface",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "fallow/css-broken-reference",
              "shortDescription": {
                "text": "CSS or CSS-in-JS reference resolves to no stylesheet definition"
              },
              "fullDescription": {
                "text": "A styling reference appears unresolved, such as a class token or keyframes name that has no stylesheet definition in the analyzed project. The finding is advisory by default and does not affect the audit verdict unless rules.css-broken-reference is set to error. Verify external or CSS-in-JS definitions before fixing."
              },
              "helpUri": "https://fallow.tools/docs/explanations/health/#css-broken-reference",
              "defaultConfiguration": {
                "level": "warning"
              }
            }
          ]
        }
      },
      "results": []
    }
  ]
}
